@@ -2,6 +2,30 @@
 # Prova Finale Ingegneria del Software 2019
 ## Gruppo AM29
 
+## How to start JARs
+### GUI.jar
+Just download it and use
+
+java --module-path PATHTOJAVAFX --add-modules=javafx.controls,javafx.fxml,javafx.graphics -jar GUI.jar YOURIP
+
+### CLI.jar
+Download it and use
+
+java -jar CLI.jar YOURIP
+### SERVER.jar
+Download it and use
+
+java -jar SERVER.jar YOURIP
+
+Where YOURIP is the IP of the computer which is running the Jar.
+If you lunch the jars on different PCs, all IPs will be different.
+You will be asked the Server IP once the jar has been launched correctly.
+
+PATHTOJAVAFX is the path to JavaFX 12 (the lib folder!!) and changes depending on where you saved your JavaFX on your PC.
+
+### Testing persistence and reconnection
+When reconnecting, remember to vote for the same map the game was being played on before disconnection!
+
 - ###   10539026    Andrea Alfieri ([@andreaalf97](https://github.com/andreaalf97))<br>andrea1.alfieri@mail.polimi.it
 - ###   10568274    Amedeo Carrioli ([@meme97](https://github.com/meme97))<br>amedeo.carrioli@mail.polimi.it
 - ###   10557963    Andrea Ceruti ([@andreaceruti](https://github.com/andreaceruti))<br>andrea3.ceruti@mail.polimi.it
